# order_placement

./: README.md  pyproject.toml
order_placement/: order.yml  order_placement_widget.py  order_placement_widget_ui.py  order_placement_widget_ui.ui  serializers.py
order_placement/model/: __init__.py  items.py  order.py
order_placement/view/: __init__.py  base_item_widget.py
order_placement/view/door/: door_item_widget.py  door_item_widget_ui.py  door_item_widget_ui.ui
order_placement/view/engine/: engine_item_widget.py  engine_item_widget_ui.py  engine_item_widget_ui.ui
order_placement/view/headlight/: headlight_item_widget.py  headlight_item_widget_ui.py  headlight_item_widget_ui.ui
tests/model/: test_order.py
